# Go2-Simple-Example

./: README.md
BaseEnvironment/: CMakeLists.txt  package.xml
BaseEnvironment/include/BaseEnvironment/: Robot.hpp  YourRobot.hpp
BaseEnvironment/rsc/go2/urdf/: go2_description.urdf
BaseEnvironment/src/Robot/: Simulation.cpp  YourRobot.cpp
